--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,9 @@ black==23.11.0
 flake8==6.1.0
 mypy==1.7.1
 
+# Production server
+gunicorn==21.2.0
+
 # Optional: Jupyter for analysis
 jupyter==1.0.0
 ipykernel==6.26.0
