--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,16 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
-numpy==1.24.3
-scipy==1.11.4
-pandas==2.1.4
+numpy>=1.24.3
+scipy>=1.11.4
+pandas>=2.1.4
 flask==2.3.3
 gunicorn==21.2.0
 
 # Machine Learning
-scikit-learn==1.3.2
-xgboost==2.0.2
-lightgbm==4.1.0
+scikit-learn>=1.3.2
+xgboost>=2.0.2
+lightgbm>=4.1.0
 
 # Data visualization and analysis
 matplotlib==3.8.2
