--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,11 @@
 services:
+  # Backend API Service
   - type: web
-    name: fsoc-optimization
+    name: fsoc-backend
     env: python
-    plan: free  # Change to 'starter' or higher for production
-    buildCommand: "./build.sh"
-    startCommand: "uvicorn main:app --host 0.0.0.0 --port $PORT"
+    plan: free
+    buildCommand: "pip install --upgrade pip setuptools wheel && pip install -r requirements.txt && python train_models.py --train"
+    startCommand: "python backend_main.py"
     healthCheckPath: "/health"
     envVars:
       - key: ENVIRONMENT
@@ -15,13 +16,20 @@ services:
         value: "1"
       - key: PYTHONUNBUFFERED
         value: "1"
-    # Optional: Add custom domains
-    # domains:
-    #   - your-domain.com
-    
-    # Optional: Add environment variables for API keys
-    # envVars:
-    #   - key: WEATHER_API_KEY
-    #     sync: false  # This will be a secret
-    #   - key: GOOGLE_ELEVATION_API_KEY
-    #     sync: false  # This will be a secret
+
+  # Frontend Web Service
+  - type: web
+    name: fsoc-frontend
+    env: python
+    plan: free
+    buildCommand: "pip install flask gunicorn requests"
+    startCommand: "python frontend_main.py"
+    envVars:
+      - key: ENVIRONMENT
+        value: production
+      - key: BACKEND_API_URL
+        value: https://fsoc-backend.onrender.com  # Update this with your actual backend URL
+      - key: PYTHONDONTWRITEBYTECODE
+        value: "1"
+      - key: PYTHONUNBUFFERED
+        value: "1"
